@startuml DER_01_Modelo_Entidad_Relacion
!theme plain
skinparam roundcorner 8
skinparam linetype ortho
skinparam shadowing true
skinparam backgroundColor #FFFFFF
skinparam entity {
    BackgroundColor #F8FAFC
    BorderColor #334155
    HeaderBackgroundColor #1E293B
    FontColor #0F172A
    BorderThickness 1.5
}

header Plataforma Hospitalaria Código Azul — ONETP 2026
title DER-01: Modelo Entidad-Relación Relacional (PostgreSQL 18 ACID)

enum "rol_usuario" as enum_rol <<ENUM>> {
    ADMINISTRADOR
    MEDICO_ACTIVADOR
    REANIMADOR_MEDICO
    OPERADOR_GUARDIA
}

enum "estado_incidente" as enum_estado <<ENUM>> {
    ACTIVADO
    NOTIFICADO
    EN_ATENCION
    RESUELTO
    CANCELADO
}

entity "usuarios" as usuarios {
    * id : SERIAL <<PK>>
    --
    * nombre : VARCHAR(100)
    * apellido : VARCHAR(100)
    * email : VARCHAR(150) <<UK>>
    * password_hash : VARCHAR(255)
    * rol : rol_usuario
    * activo : BOOLEAN = true
    * created_at : TIMESTAMPTZ = NOW()
}

entity "ubicaciones" as ubicaciones {
    * id : SERIAL <<PK>>
    --
    * edificio : VARCHAR(100)
    * piso : INT
    * sector_sala : VARCHAR(100)
    * cama : VARCHAR(20)
    * created_at : TIMESTAMPTZ = NOW()
    --
    <<UQ(edificio, piso, sector_sala, cama)>>
}

entity "incidentes" as incidentes {
    * id : SERIAL <<PK>>
    --
    * codigo_uuid : UUID <<UK, gen_random_uuid()>>
    * ubicacion_id : INT <<FK -> ubicaciones.id>>
    * activado_por_id : INT <<FK -> usuarios.id>>
    reanimador_id : INT <<FK -> usuarios.id, NULL>>
    * estado : estado_incidente = 'ACTIVADO'
    motivo_cancelacion : TEXT
    * created_at : TIMESTAMPTZ = NOW()
    resolved_at : TIMESTAMPTZ
}

entity "incidentes_auditoria_eventos" as auditoria {
    * id : BIGSERIAL <<PK>>
    --
    * incidente_id : INT <<FK -> incidentes.id>>
    usuario_id : INT <<FK -> usuarios.id, NULL>>
    * tipo_evento : VARCHAR(50)
    * payload_data : JSONB = '{}'
    * timestamp_evento : TIMESTAMPTZ = NOW()
    --
    <<Trigger: trg_audit_immutable>>
    <<BLOQUEO TOTAL UPDATE / DELETE>>
}

entity "usuarios_dispositivos_fcm" as fcm_tokens {
    * id : SERIAL <<PK>>
    --
    * usuario_id : INT <<FK -> usuarios.id>>
    * token_fcm : VARCHAR(500) <<UK>>
    * plataforma : VARCHAR(20) = 'ANDROID'
    * activo : BOOLEAN = true
    * ultimo_acceso : TIMESTAMPTZ = NOW()
    * created_at : TIMESTAMPTZ = NOW()
}

entity "notificaciones_push" as notificaciones {
    * id : SERIAL <<PK>>
    --
    * incidente_id : INT <<FK -> incidentes.id>>
    * token_fcm : VARCHAR(255)
    * titulo : VARCHAR(150)
    * cuerpo : TEXT
    * despachado : BOOLEAN = false
    * timestamp_despacho : TIMESTAMPTZ = NOW()
}

' Relaciones
usuarios ||--o{ incidentes : "1. activa (activado_por_id)"
usuarios ||--o{ incidentes : "2. atiende (reanimador_id)"
ubicaciones ||--o{ incidentes : "ocurre en"
incidentes ||--o{ auditoria : "genera bitácora inmutable [1..*]"
usuarios ||--o{ auditoria : "registrado por (opcional)"
usuarios ||--o{ fcm_tokens : "posee dispositivos [0..*]"
incidentes ||--o{ notificaciones : "despacha push [0..*]"

enum_rol -[hidden]-> usuarios
enum_estado -[hidden]-> incidentes

note right of auditoria
  <b>Gobernanza y Blindaje Legal:</b>
  La tabla de auditoría es estrictamente
  <b>Append-Only</b>. La función plpgsql
  <i>fn_prevent_audit_tampering()</i>
  rechaza irrevocablemente cualquier
  operación UPDATE o DELETE.
end note

note bottom of incidentes
  <b>Barrera de Idempotencia:</b>
  Indexado por (ubicacion_id, created_at DESC)
  para descartar pulsaciones repetidas
  en una ventana de 60 segundos.
end note

@enduml
